fix(spinner): white space when show spinner

--- a/components/Spinner/Spinner.module.css
+++ b/components/Spinner/Spinner.module.css
@@ -1,7 +1,6 @@
 .skCubeGrid {
   width: 40px;
   height: 40px;
-  margin: 100px auto;
 }
 
 .skCubeGrid .skCube {
